semantic tags corrected

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 </head>
 
 <body>
-	<div class=" top-header">
+	<header>
 		<h1 class="name">Nina Carducci</h1>
-		<div class="nav">
+		<nav>
 			<ul>
 				<li><a href="#about">À propos</a></li>
 				<li><a href="#gallery">Galerie</a></li>
@@ -33,9 +33,9 @@
 				<li><a class="social-link" href="https://www.instagram.com/ninacarducci.photo/?hl=fr"
 						target="_blank"><img src="assets/images/instagram.png" alt="instagram logo"></a></li>
 			</ul>
-		</div>
-	</div>
-	<div id="header">
+		</nav>
+	</header>
+	<main>
 
 		<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
 			<div class="carousel-indicators">
@@ -71,118 +71,126 @@
 				<span class="visually-hidden">Next</span>
 			</button>
 		</div>
-	</div>
-	<div id="about">
-		<div class="picture left">
-			<img src="./assets/images/nina.png" alt="the portrait of the photographer Nina Carducci">
-		</div>
-		<div id="about-me">
-			<h2 class="about-me__title">A propos de moi</h2>
-			<h3 class="about-me__introduction">Devenir photographe était pour moi une évidence. Comme si j’y étais
-				prédestiné. Saisir un moment, une émotion, une situation, un endroit, une lumière et les rendre
-				immortels, voilà ce qui me fait vibrer.</h3>
-			<p>Nous passons notre vie à chercher le bonheur, et lorsque nous y touchons, nous n’avons qu’une envie : le
-				figer au travers de photographies pour le savourer avec les personnes qui sont importantes à nos yeux,
-				ou le partager au plus grand nombre.
-				C’est ce que je vous propose : saisir ces merveilleux moments au travers de mon regard, mon approche, ma
-				technique. Rendre ces moments immortels, afin que vous puissiez y puiser de l’amour, du bonheur, de la
-				tendresse et de lumière à chaque fois que vous poserez les yeux sur vos photos.</p>
-		</div>
-	</div>
-	<div id="gallery">
-		<h2 class="title">Portfolio</h2>
-		<div class="container py-3">
-			<div class="gallery" style="display: none">
-				<img data-gallery-tag="Concert" class="gallery-item"
-					src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.jpg"
-					alt="dimmed lights showing a scene at a concert" />
-				<img data-gallery-tag="Entreprises" class="gallery-item"
-					src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.jpg"
-					alt="portrait of a man dressed formal" />
-				<img data-gallery-tag="Entreprises" class="gallery-item"
-					src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.jpg"
-					alt="a woman dressed formal smiling" />
-				<img data-gallery-tag="Mariages" class="gallery-item"
-					src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.jpg"
-					alt="woman's and man's hands reaching toward each other" />
-				<img data-gallery-tag="Portrait" class="gallery-item"
-					src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.jpg"
-					alt="a portrait of a dark skinned man with eyes closed" />
-				<img data-gallery-tag="Mariages" class="gallery-item"
-					src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.jpg"
-					alt="a married couple walking in a green area laughing" />
-				<img data-gallery-tag="Portrait" class="gallery-item"
-					src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash.jpg"
-					alt="a portrait of a girl wearing black with glasses on" />
-				<img data-gallery-tag="Concert" class="gallery-item"
-					src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.jpg"
-					alt="a snap of a singer at a concert" />
-				<img data-gallery-tag="Entreprises" class="gallery-item"
-					src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.jpg"
-					alt="a woman at her laptop laughing" />
+
+		<div id="about">
+			<div class="picture left">
+				<img src="./assets/images/nina.png" alt="the portrait of the photographer Nina Carducci">
+			</div>
+			<div id="about-me">
+				<h2 class="about-me__title">A propos de moi</h2>
+				<h3 class="about-me__introduction">Devenir photographe était pour moi une évidence. Comme si j’y étais
+					prédestiné. Saisir un moment, une émotion, une situation, un endroit, une lumière et les rendre
+					immortels, voilà ce qui me fait vibrer.</h3>
+				<p>Nous passons notre vie à chercher le bonheur, et lorsque nous y touchons, nous n’avons qu’une envie :
+					le
+					figer au travers de photographies pour le savourer avec les personnes qui sont importantes à nos
+					yeux,
+					ou le partager au plus grand nombre.
+					C’est ce que je vous propose : saisir ces merveilleux moments au travers de mon regard, mon
+					approche, ma
+					technique. Rendre ces moments immortels, afin que vous puissiez y puiser de l’amour, du bonheur, de
+					la
+					tendresse et de lumière à chaque fois que vous poserez les yeux sur vos photos.</p>
 			</div>
 		</div>
+		<div id="gallery">
+			<h2 class="title">Portfolio</h2>
+			<div class="container py-3">
+				<div class="gallery" style="display: none">
+					<img data-gallery-tag="Concert" class="gallery-item"
+						src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.jpg"
+						alt="dimmed lights showing a scene at a concert" />
+					<img data-gallery-tag="Entreprises" class="gallery-item"
+						src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.jpg"
+						alt="portrait of a man dressed formal" />
+					<img data-gallery-tag="Entreprises" class="gallery-item"
+						src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.jpg"
+						alt="a woman dressed formal smiling" />
+					<img data-gallery-tag="Mariages" class="gallery-item"
+						src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.jpg"
+						alt="woman's and man's hands reaching toward each other" />
+					<img data-gallery-tag="Portrait" class="gallery-item"
+						src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.jpg"
+						alt="a portrait of a dark skinned man with eyes closed" />
+					<img data-gallery-tag="Mariages" class="gallery-item"
+						src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.jpg"
+						alt="a married couple walking in a green area laughing" />
+					<img data-gallery-tag="Portrait" class="gallery-item"
+						src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash.jpg"
+						alt="a portrait of a girl wearing black with glasses on" />
+					<img data-gallery-tag="Concert" class="gallery-item"
+						src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.jpg"
+						alt="a snap of a singer at a concert" />
+					<img data-gallery-tag="Entreprises" class="gallery-item"
+						src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.jpg"
+						alt="a woman at her laptop laughing" />
+				</div>
+			</div>
+			<div class="quote">
+				<figure>
+					<blockquote>
+						<h3 class="quote__text">Un portrait n’est pas une ressemblance. Dès lors qu’une émotion ou qu’un
+							fait est traduit en photo, il cesse d’être un fait pour devenir une opinion. L’inexactitude
+							n’existe pas en photographie. Toutes les photos sont exactes. Aucune d’elles n’est la
+							vérité.
+						</h3>
+					</blockquote>
+					<figcaption class="quote__author">- Richard Avedon</figcaption>
+				</figure>
+			</div>
+		</div>
+		<article id="services">
+			<h2 class="title">Mes services</h2>
+			<div class="container">
+				<section class="service">
+					<div class="service__description">
+						<h3>Shooting photo</h3>
+						<p>Pour capturer vos moments les plus précieux et garder un souvenir impérissable. Je me déplace
+							en
+							Île-de-France pour réaliser vos photos</p>
+					</div>
+					<div class="service__price">
+						<h4>350€/demi journée</h4>
+						<span>Matériel, déplacement inclus</span>
+					</div>
+
+				</section>
+				<section class="service">
+					<div class="service__description">
+						<h3>Retouches</h3>
+						<p>Vous souhaitez retoucher vos photos pour un résultat professionnel ? Bénéficier d’un rendu
+							optimal pour vos publications</p>
+					</div>
+					<div class="service__price">
+						<h4>50€/photo</h4>
+						<span>2 AR par photo</span>
+					</div>
+				</section>
+				<section class="service">
+					<div class="service__description">
+						<h3>Album photos</h3>
+						<p>Partagez avec vos proches et vos clients les photos des moments partagés ensemble à travers
+							un
+							album photo personnalisé</p>
+					</div>
+					<div class="service__price">
+						<h4>400€ album A4</h4>
+						<span>30 pages recto/verso</span>
+					</div>
+				</section>
+			</div>
+		</article>
 		<div class="quote">
 			<figure>
 				<blockquote>
-					<h3 class="quote__text">Un portrait n’est pas une ressemblance. Dès lors qu’une émotion ou qu’un
-						fait est traduit en photo, il cesse d’être un fait pour devenir une opinion. L’inexactitude
-						n’existe pas en photographie. Toutes les photos sont exactes. Aucune d’elles n’est la vérité.
-					</h3>
+					<h3 class="quote__text">De manière inconsciente, je crois, je guette un regard, une expression, des
+						traits ou une nostalgie capable de résumer ou plus exactement de révéler une vie</h3>
 				</blockquote>
 				<figcaption class="quote__author">- Richard Avedon</figcaption>
 			</figure>
 		</div>
-	</div>
-	<div id="services">
-		<h2 class="title">Mes services</h2>
-		<div class="container">
-			<div class="service">
-				<div class="service__description">
-					<h3>Shooting photo</h3>
-					<p>Pour capturer vos moments les plus précieux et garder un souvenir impérissable. Je me déplace en
-						Île-de-France pour réaliser vos photos</p>
-				</div>
-				<div class="service__price">
-					<h4>350€/demi journée</h4>
-					<span>Matériel, déplacement inclus</span>
-				</div>
-
-			</div>
-			<div class="service">
-				<div class="service__description">
-					<h3>Retouches</h3>
-					<p>Vous souhaitez retoucher vos photos pour un résultat professionnel ? Bénéficier d’un rendu
-						optimal pour vos publications</p>
-				</div>
-				<div class="service__price">
-					<h4>50€/photo</h4>
-					<span>2 AR par photo</span>
-				</div>
-			</div>
-			<div class="service">
-				<div class="service__description">
-					<h3>Album photos</h3>
-					<p>Partagez avec vos proches et vos clients les photos des moments partagés ensemble à travers un
-						album photo personnalisé</p>
-				</div>
-				<div class="service__price">
-					<h4>400€ album A4</h4>
-					<span>30 pages recto/verso</span>
-				</div>
-			</div>
-		</div>
-	</div>
-	<div class="quote">
-		<figure>
-			<blockquote>
-				<h3 class="quote__text">De manière inconsciente, je crois, je guette un regard, une expression, des
-					traits ou une nostalgie capable de résumer ou plus exactement de révéler une vie</h3>
-			</blockquote>
-			<figcaption class="quote__author">- Richard Avedon</figcaption>
-		</figure>
-	</div>
-	<div id="contact">
+	</main>
+	<footer>
 		<div class="container">
 			<div class="form-container">
 				<h3>Une question ? Une demande de devis ?</h3>
@@ -201,7 +209,7 @@
 				<img src="./assets/images/camera.png" alt="a picture of a camera">
 			</div>
 		</div>
-	</div>
+	</footer>
 </body>
 
 </html>
