--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -19,6 +19,7 @@
 	<title>Photographie | Nina Carducci</title>
 	<meta name="description"
 		content="Découvrez l'art de la photographie avec Nina Carducci. Spécialisée en capturant des moments précieux avec une approche unique et technique professionnelle. Basée a Bordeaux, Nina propose des séances photo, des retouches et des albums personnalisés pour figer vos plus beaux souvenirs.">
+
 </head>
 
 <body>
@@ -99,31 +100,31 @@
 				<div class="gallery" style="display: none">
 					<img data-gallery-tag="Concert" class="gallery-item"
 						src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.jpg"
-						alt="dimmed lights showing a scene at a concert" />
+						alt="dimmed lights showing a scene at a concert">
 					<img data-gallery-tag="Entreprises" class="gallery-item"
 						src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.jpg"
-						alt="portrait of a man dressed formal" />
+						alt="portrait of a man dressed formal">
 					<img data-gallery-tag="Entreprises" class="gallery-item"
 						src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.jpg"
-						alt="a woman dressed formal smiling" />
+						alt="a woman dressed formal smiling">
 					<img data-gallery-tag="Mariages" class="gallery-item"
 						src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.jpg"
-						alt="woman's and man's hands reaching toward each other" />
+						alt="woman's and man's hands reaching toward each other">
 					<img data-gallery-tag="Portrait" class="gallery-item"
 						src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.jpg"
-						alt="a portrait of a dark skinned man with eyes closed" />
+						alt="a portrait of a dark skinned man with eyes closed">
 					<img data-gallery-tag="Mariages" class="gallery-item"
 						src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.jpg"
-						alt="a married couple walking in a green area laughing" />
+						alt="a married couple walking in a green area laughing">
 					<img data-gallery-tag="Portrait" class="gallery-item"
 						src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash.jpg"
-						alt="a portrait of a girl wearing black with glasses on" />
+						alt="a portrait of a girl wearing black with glasses on">
 					<img data-gallery-tag="Concert" class="gallery-item"
 						src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.jpg"
-						alt="a snap of a singer at a concert" />
+						alt="a snap of a singer at a concert">
 					<img data-gallery-tag="Entreprises" class="gallery-item"
 						src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.jpg"
-						alt="a woman at her laptop laughing" />
+						alt="a woman at her laptop laughing">
 				</div>
 			</div>
 			<div class="quote">
@@ -195,14 +196,14 @@
 			<div class="form-container">
 				<h3>Une question ? Une demande de devis ?</h3>
 				<p> N’hésitez pas à m’écrire ! Je vous répondrais en moins de 24 heures</p>
-				<form action="" method="post">
+				<form action="index.html" method="post">
 					<label>Nom</label>
 					<input type="text" name="nom" id="nom">
 					<label>Email</label>
 					<input type="email" name="email" id="email">
 					<label>Message</label>
 					<textarea name="message" id="message" cols="30" rows="10"></textarea>
-					<input type="submit" value="Envoyer" />
+					<input type="submit" value="Envoyer">
 				</form>
 			</div>
 			<div class="picture right">
