added address and phone number for local referncement

--- a/index.html
+++ b/index.html
@@ -23,7 +23,27 @@
 	<title>Photographie | Nina Carducci</title>
 	<meta name="description"
 		content="Découvrez l'art de la photographie avec Nina Carducci. Spécialisée en capturant des moments précieux avec une approche unique et technique professionnelle. Basée a Bordeaux, Nina propose des séances photo, des retouches et des albums personnalisés pour figer vos plus beaux souvenirs.">
+	<script type="application/ld+json">
+			{
+			  "@context": "https://schema.org",
+			  "@type": "Photographe",
+			  "address": {
+				"@type": "PostalAddress",
+				"addressLocality": "Nina Carducci photographe",
+				"addressRegion": "Bordeaux",
+				"postalCode": "33200",
+				"streetAddress": "68 Avenue Alsace-Lorraine"
+			  },
 
+			  "name": "Nina Carducci",
+			  "openingHours": [
+				"Mo-Fr 10:00-19:00"
+			  ],
+			  
+			  "telephone": "05 56 67 78 89",
+			  "url": "https://xpatk.github.io/NinaP4/"
+			}
+			</script>
 </head>
 
 <body>
