added meta tags for twitter and og

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="robots" content="index, follow" />
+	<meta name="robots" content="index, follow">
 	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.css" media="print" onload="this.media='all'">
 	<noscript>
 		<link rel="stylesheet" href="./assets/bootstrap/bootstrap.css">
@@ -44,6 +44,22 @@
 			  "url": "https://xpatk.github.io/NinaP4/"
 			}
 			</script>
+
+	<meta property="og:site_name" content="Nina Carducci Photographie">
+	<meta property="og:type" content="website" />
+	<meta property="og:url" content="https://xpatk.github.io/NinaP4/">
+	<meta property="og:title" content="Nina Carducci - Capturer des Moments">
+	<meta property="og:description"
+		content="Découvrez l'art de la photographie avec Nina Carducci. Spécialisée dans la capture de moments précieux avec une approche unique et une technique professionnelle.">
+	<meta property="og:image" content="https://xpatk.github.io/NinaP4/assets/images/nina.jpg">
+
+	<meta name="twitter:card" content="summary_large_image">
+	<meta name="twitter:site" content="@ninacarducci" />
+	<meta name="twitter:title" content="Nina Carducci - Capturer des Moments">
+	<meta name="twitter:description"
+		content="Découvrez l'art de la photographie avec Nina Carducci. Spécialisée dans la capture de moments précieux avec une approche unique et une technique professionnelle.">
+	<meta name="twitter:image" content="https://xpatk.github.io/NinaP4/assets/images/nina.jpg">
+	<meta name="twitter:url" content="https://xpatk.github.io/NinaP4/">
 </head>
 
 <body>
