--- a/index.html
+++ b/index.html
@@ -2,59 +2,59 @@
 <html lang="fr">
 
 <head>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width,initial-scale=1">
 	<meta name="robots" content="index, follow">
-	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.css" media="print" onload="this.media='all'">
-	<noscript>
+	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.css" media="print" onload='this.media="all"'><noscript>
 		<link rel="stylesheet" href="./assets/bootstrap/bootstrap.css">
 	</noscript>
 	<link rel="stylesheet" href="./assets/style.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link
+	<link rel="preload"
 		href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap"
-		rel="stylesheet">
+		as="style" crossorigin>
+	<noscript>
+		<link
+			href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap"
+			rel="stylesheet">
+	</noscript>
 	<meta charset="UTF-8">
-	<script src="./assets/bootstrap/bootstrap.bundle.js" defer></script>
+	<script src="./assets/bootstrap/bootstrap.bundle.js" defer="defer"></script>
 	<script src="https://code.jquery.com/jquery-3.4.1.min.js"
-		integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous" defer></script>
-	<script src="./assets/maugallery.js" defer></script>
-	<script src="./assets/scripts.js" defer></script>
+		integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous" defer="defer"></script>
+	<script src="./assets/maugallery.js" defer="defer"></script>
+	<script src="./assets/scripts.js" defer="defer"></script>
 	<title>Photographie | Nina Carducci</title>
 	<meta name="description"
 		content="Découvrez l'art de la photographie avec Nina Carducci. Spécialisée en capturant des moments précieux avec une approche unique et technique professionnelle. Basée a Bordeaux, Nina propose des séances photo, des retouches et des albums personnalisés pour figer vos plus beaux souvenirs.">
-	<script type="application/ld+json">
-			{
-			  "@context": "https://schema.org",
-			  "@type": "Photographe",
-			  "address": {
-				"@type": "PostalAddress",
-				"addressLocality": "Nina Carducci photographe",
-				"addressRegion": "Bordeaux",
-				"postalCode": "33200",
-				"streetAddress": "68 Avenue Alsace-Lorraine"
-			  },
+	<script type="application/ld+json">{
+	"@context": "https://schema.org",
+	"@type": "Photographe",
+	"address": {
+	  "@type": "PostalAddress",
+	  "addressLocality": "Nina Carducci photographe",
+	  "addressRegion": "Bordeaux",
+	  "postalCode": "33200",
+	  "streetAddress": "68 Avenue Alsace-Lorraine"
+	},
 
-			  "name": "Nina Carducci",
-			  "openingHours": [
-				"Mo-Fr 10:00-19:00"
-			  ],
-			  
-			  "telephone": "05 56 67 78 89",
-			  "url": "https://xpatk.github.io/NinaP4/"
-			}
-			</script>
-
+	"name": "Nina Carducci",
+	"openingHours": [
+	  "Mo-Fr 10:00-19:00"
+	],
+	
+	"telephone": "05 56 67 78 89",
+	"url": "https://xpatk.github.io/NinaP4/"
+  }</script>
 	<meta property="og:site_name" content="Nina Carducci Photographie">
-	<meta property="og:type" content="website" />
+	<meta property="og:type" content="website">
 	<meta property="og:url" content="https://xpatk.github.io/NinaP4/">
 	<meta property="og:title" content="Nina Carducci - Capturer des Moments">
 	<meta property="og:description"
 		content="Découvrez l'art de la photographie avec Nina Carducci. Spécialisée dans la capture de moments précieux avec une approche unique et une technique professionnelle.">
 	<meta property="og:image" content="https://xpatk.github.io/NinaP4/assets/images/nina.jpg">
-
 	<meta name="twitter:card" content="summary_large_image">
-	<meta name="twitter:site" content="@ninacarducci" />
+	<meta name="twitter:site" content="@ninacarducci">
 	<meta name="twitter:title" content="Nina Carducci - Capturer des Moments">
 	<meta name="twitter:description"
 		content="Découvrez l'art de la photographie avec Nina Carducci. Spécialisée dans la capture de moments précieux avec une approche unique et une technique professionnelle.">
@@ -77,95 +77,68 @@
 		</nav>
 	</header>
 	<main>
-
 		<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-			<div class="carousel-indicators">
-				<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
-					aria-current="true" aria-label="Slide 1"></button>
-				<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
-					aria-label="Slide 2"></button>
-				<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
-					aria-label="Slide 3"></button>
-			</div>
+			<div class="carousel-indicators"><button type="button" data-bs-target="#carouselExampleIndicators"
+					data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button><button
+					type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+					aria-label="Slide 2"></button><button type="button" data-bs-target="#carouselExampleIndicators"
+					data-bs-slide-to="2" aria-label="Slide 3"></button></div>
 			<div class="carousel-inner">
-				<div class="carousel-item active">
-					<img src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp" class="d-block w-100"
-						alt="a man dressed formal on a zebra crossing">
-				</div>
-				<div class="carousel-item">
-					<img src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.webp" class="d-block w-100"
-						alt="people cheering at a social event">
-				</div>
-				<div class="carousel-item">
-					<img src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.webp" class="d-block w-100"
-						alt="newly weds kissing at a ceremony surrounded by their guests">
-				</div>
-			</div>
-			<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
-				data-bs-slide="prev">
-				<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-				<span class="visually-hidden">Previous</span>
-			</button>
-			<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
-				data-bs-slide="next">
-				<span class="carousel-control-next-icon" aria-hidden="true"></span>
-				<span class="visually-hidden">Next</span>
-			</button>
+				<div class="carousel-item active"><img
+						src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp" class="d-block w-100"
+						alt="a man dressed formal on a zebra crossing"></div>
+				<div class="carousel-item"><img src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.webp"
+						class="d-block w-100" alt="people cheering at a social event"></div>
+				<div class="carousel-item"><img src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.webp"
+						class="d-block w-100" alt="newly weds kissing at a ceremony surrounded by their guests"></div>
+			</div><button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+				data-bs-slide="prev"><span class="carousel-control-prev-icon" aria-hidden="true"></span><span
+					class="visually-hidden">Previous</span></button><button class="carousel-control-next" type="button"
+				data-bs-target="#carouselExampleIndicators" data-bs-slide="next"><span
+					class="carousel-control-next-icon" aria-hidden="true"></span><span
+					class="visually-hidden">Next</span></button>
 		</div>
-
 		<div id="about">
-			<div class="picture left">
-				<img src="./assets/images/nina.png" alt="the portrait of the photographer Nina Carducci">
-			</div>
+			<div class="picture left"><img src="./assets/images/nina.png"
+					alt="the portrait of the photographer Nina Carducci"></div>
 			<div id="about-me">
 				<h2 class="about-me__title">A propos de moi</h2>
 				<h3 class="about-me__introduction">Devenir photographe était pour moi une évidence. Comme si j’y étais
 					prédestiné. Saisir un moment, une émotion, une situation, un endroit, une lumière et les rendre
 					immortels, voilà ce qui me fait vibrer.</h3>
 				<p>Nous passons notre vie à chercher le bonheur, et lorsque nous y touchons, nous n’avons qu’une envie :
-					le
-					figer au travers de photographies pour le savourer avec les personnes qui sont importantes à nos
-					yeux,
-					ou le partager au plus grand nombre.
-					C’est ce que je vous propose : saisir ces merveilleux moments au travers de mon regard, mon
-					approche, ma
-					technique. Rendre ces moments immortels, afin que vous puissiez y puiser de l’amour, du bonheur, de
-					la
-					tendresse et de lumière à chaque fois que vous poserez les yeux sur vos photos.</p>
+					le figer au travers de photographies pour le savourer avec les personnes qui sont importantes à nos
+					yeux, ou le partager au plus grand nombre. C’est ce que je vous propose : saisir ces merveilleux
+					moments au travers de mon regard, mon approche, ma technique. Rendre ces moments immortels, afin que
+					vous puissiez y puiser de l’amour, du bonheur, de la tendresse et de lumière à chaque fois que vous
+					poserez les yeux sur vos photos.</p>
 			</div>
 		</div>
 		<div id="gallery">
 			<h2 class="title">Portfolio</h2>
 			<div class="container py-3">
-				<div class="gallery" style="display: none">
-					<img data-gallery-tag="Concert" class="gallery-item"
+				<div class="gallery" style="display:none"><img data-gallery-tag="Concert" class="gallery-item"
 						src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.jpg"
-						alt="dimmed lights showing a scene at a concert">
-					<img data-gallery-tag="Entreprises" class="gallery-item"
+						alt="dimmed lights showing a scene at a concert"> <img data-gallery-tag="Entreprises"
+						class="gallery-item"
 						src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.jpg"
-						alt="portrait of a man dressed formal">
-					<img data-gallery-tag="Entreprises" class="gallery-item"
+						alt="portrait of a man dressed formal"> <img data-gallery-tag="Entreprises" class="gallery-item"
 						src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.jpg"
-						alt="a woman dressed formal smiling">
-					<img data-gallery-tag="Mariages" class="gallery-item"
+						alt="a woman dressed formal smiling"> <img data-gallery-tag="Mariages" class="gallery-item"
 						src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.jpg"
-						alt="woman's and man's hands reaching toward each other">
-					<img data-gallery-tag="Portrait" class="gallery-item"
-						src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.jpg"
-						alt="a portrait of a dark skinned man with eyes closed">
-					<img data-gallery-tag="Mariages" class="gallery-item"
-						src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.jpg"
-						alt="a married couple walking in a green area laughing">
-					<img data-gallery-tag="Portrait" class="gallery-item"
+						alt="woman's and man's hands reaching toward each other"> <img data-gallery-tag="Portrait"
+						class="gallery-item" src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.jpg"
+						alt="a portrait of a dark skinned man with eyes closed"> <img data-gallery-tag="Mariages"
+						class="gallery-item" src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.jpg"
+						alt="a married couple walking in a green area laughing"> <img data-gallery-tag="Portrait"
+						class="gallery-item"
 						src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash.jpg"
-						alt="a portrait of a girl wearing black with glasses on">
-					<img data-gallery-tag="Concert" class="gallery-item"
+						alt="a portrait of a girl wearing black with glasses on"> <img data-gallery-tag="Concert"
+						class="gallery-item"
 						src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.jpg"
-						alt="a snap of a singer at a concert">
-					<img data-gallery-tag="Entreprises" class="gallery-item"
+						alt="a snap of a singer at a concert"> <img data-gallery-tag="Entreprises" class="gallery-item"
 						src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.jpg"
-						alt="a woman at her laptop laughing">
-				</div>
+						alt="a woman at her laptop laughing"></div>
 			</div>
 			<div class="quote">
 				<figure>
@@ -173,8 +146,7 @@
 						<h3 class="quote__text">Un portrait n’est pas une ressemblance. Dès lors qu’une émotion ou qu’un
 							fait est traduit en photo, il cesse d’être un fait pour devenir une opinion. L’inexactitude
 							n’existe pas en photographie. Toutes les photos sont exactes. Aucune d’elles n’est la
-							vérité.
-						</h3>
+							vérité.</h3>
 					</blockquote>
 					<figcaption class="quote__author">- Richard Avedon</figcaption>
 				</figure>
@@ -187,14 +159,11 @@
 					<div class="service__description">
 						<h3>Shooting photo</h3>
 						<p>Pour capturer vos moments les plus précieux et garder un souvenir impérissable. Je me déplace
-							en
-							Île-de-France pour réaliser vos photos</p>
+							en Île-de-France pour réaliser vos photos</p>
 					</div>
 					<div class="service__price">
-						<h4>350€/demi journée</h4>
-						<span>Matériel, déplacement inclus</span>
+						<h4>350€/demi journée</h4><span>Matériel, déplacement inclus</span>
 					</div>
-
 				</section>
 				<section class="service">
 					<div class="service__description">
@@ -203,20 +172,17 @@
 							optimal pour vos publications</p>
 					</div>
 					<div class="service__price">
-						<h4>50€/photo</h4>
-						<span>2 AR par photo</span>
+						<h4>50€/photo</h4><span>2 AR par photo</span>
 					</div>
 				</section>
 				<section class="service">
 					<div class="service__description">
 						<h3>Album photos</h3>
 						<p>Partagez avec vos proches et vos clients les photos des moments partagés ensemble à travers
-							un
-							album photo personnalisé</p>
+							un album photo personnalisé</p>
 					</div>
 					<div class="service__price">
-						<h4>400€ album A4</h4>
-						<span>30 pages recto/verso</span>
+						<h4>400€ album A4</h4><span>30 pages recto/verso</span>
 					</div>
 				</section>
 			</div>
@@ -235,20 +201,13 @@
 		<div class="container">
 			<div class="form-container">
 				<h3>Une question ? Une demande de devis ?</h3>
-				<p> N’hésitez pas à m’écrire ! Je vous répondrais en moins de 24 heures</p>
-				<form action="index.html" method="post">
-					<label for="nom">Nom</label>
-					<input type="text" name="nom" id="nom">
-					<label for="email">Email</label>
-					<input type="email" name="email" id="email">
-					<label for="message">Message</label>
-					<textarea name="message" id="message" cols="30" rows="10"></textarea>
-					<input type="submit" value="Envoyer">
-				</form>
+				<p>N’hésitez pas à m’écrire ! Je vous répondrais en moins de 24 heures</p>
+				<form action="index.html" method="post"><label for="nom">Nom</label><input type="text" name="nom"
+						id="nom"><label for="email">Email</label><input type="email" name="email" id="email"><label
+						for="message">Message</label><textarea name="message" id="message" cols="30"
+						rows="10"></textarea><input type="submit" value="Envoyer"></form>
 			</div>
-			<div class="picture right">
-				<img src="./assets/images/camera.png" alt="a picture of a camera">
-			</div>
+			<div class="picture right"><img src="./assets/images/camera.png" alt="a picture of a camera"></div>
 		</div>
 	</footer>
 </body>
