--- a/index.html
+++ b/index.html
@@ -86,11 +86,12 @@
 			<div class="carousel-inner">
 				<div class="carousel-item active"><img
 						src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp" class="d-block w-100"
-						alt="a man dressed formal on a zebra crossing"></div>
+						alt="a man dressed formal on a zebra crossing" loading="lazy"></div>
 				<div class="carousel-item"><img src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.webp"
-						class="d-block w-100" alt="people cheering at a social event"></div>
+						class="d-block w-100" alt="people cheering at a social event" loading="lazy"></div>
 				<div class="carousel-item"><img src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.webp"
-						class="d-block w-100" alt="newly weds kissing at a ceremony surrounded by their guests"></div>
+						class="d-block w-100" alt="newly weds kissing at a ceremony surrounded by their guests"
+						loading="lazy"></div>
 			</div><button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
 				data-bs-slide="prev"><span class="carousel-control-prev-icon" aria-hidden="true"></span><span
 					class="visually-hidden">Previous</span></button><button class="carousel-control-next" type="button"
@@ -100,7 +101,7 @@
 		</div>
 		<div id="about">
 			<div class="picture left"><img src="./assets/images/nina.png"
-					alt="the portrait of the photographer Nina Carducci"></div>
+					alt="the portrait of the photographer Nina Carducci" loading="lazy"></div>
 			<div id="about-me">
 				<h2 class="about-me__title">A propos de moi</h2>
 				<h3 class="about-me__introduction">Devenir photographe était pour moi une évidence. Comme si j’y étais
@@ -119,26 +120,31 @@
 			<div class="container py-3">
 				<div class="gallery" style="display:none"><img data-gallery-tag="Concert" class="gallery-item"
 						src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.jpg"
-						alt="dimmed lights showing a scene at a concert"> <img data-gallery-tag="Entreprises"
-						class="gallery-item"
+						alt="dimmed lights showing a scene at a concert" loading="lazy"> <img
+						data-gallery-tag="Entreprises" class="gallery-item"
 						src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.jpg"
-						alt="portrait of a man dressed formal"> <img data-gallery-tag="Entreprises" class="gallery-item"
+						alt="portrait of a man dressed formal" loading="lazy"> <img data-gallery-tag="Entreprises"
+						class="gallery-item"
 						src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.jpg"
-						alt="a woman dressed formal smiling"> <img data-gallery-tag="Mariages" class="gallery-item"
+						alt="a woman dressed formal smiling" loading="lazy"> <img data-gallery-tag="Mariages"
+						class="gallery-item"
 						src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.jpg"
-						alt="woman's and man's hands reaching toward each other"> <img data-gallery-tag="Portrait"
-						class="gallery-item" src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.jpg"
-						alt="a portrait of a dark skinned man with eyes closed"> <img data-gallery-tag="Mariages"
-						class="gallery-item" src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.jpg"
-						alt="a married couple walking in a green area laughing"> <img data-gallery-tag="Portrait"
-						class="gallery-item"
+						alt="woman's and man's hands reaching toward each other" loading="lazy"> <img
+						data-gallery-tag="Portrait" class="gallery-item"
+						src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.jpg"
+						alt="a portrait of a dark skinned man with eyes closed" loading="lazy"> <img
+						data-gallery-tag="Mariages" class="gallery-item"
+						src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.jpg"
+						alt="a married couple walking in a green area laughing" loading="lazy"> <img
+						data-gallery-tag="Portrait" class="gallery-item"
 						src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash.jpg"
-						alt="a portrait of a girl wearing black with glasses on"> <img data-gallery-tag="Concert"
-						class="gallery-item"
+						alt="a portrait of a girl wearing black with glasses on" loading="lazy"> <img
+						data-gallery-tag="Concert" class="gallery-item"
 						src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.jpg"
-						alt="a snap of a singer at a concert"> <img data-gallery-tag="Entreprises" class="gallery-item"
+						alt="a snap of a singer at a concert" loading="lazy"> <img data-gallery-tag="Entreprises"
+						class="gallery-item"
 						src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.jpg"
-						alt="a woman at her laptop laughing"></div>
+						alt="a woman at her laptop laughing" loading="lazy"></div>
 			</div>
 			<div class="quote">
 				<figure>
@@ -207,7 +213,8 @@
 						for="message">Message</label><textarea name="message" id="message" cols="30"
 						rows="10"></textarea><input type="submit" value="Envoyer"></form>
 			</div>
-			<div class="picture right"><img src="./assets/images/camera.png" alt="a picture of a camera"></div>
+			<div class="picture right"><img src="./assets/images/camera.png" alt="a picture of a camera" loading="lazy">
+			</div>
 		</div>
 	</footer>
 </body>
