resized img slider

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 			<div class="carousel-inner">
 				<div class="carousel-item active"><img
 						src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp" class="d-block w-100"
-						alt="a man dressed formal on a zebra crossing" loading="lazy"></div>
+						alt="a man dressed formal on a zebra crossing"></div>
 				<div class="carousel-item"><img src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.webp"
 						class="d-block w-100" alt="people cheering at a social event" loading="lazy"></div>
 				<div class="carousel-item"><img src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.webp"
