--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 					class="visually-hidden">Next</span></button>
 		</div>
 		<div id="about">
-			<div class="picture left"><img src="./assets/images/nina.png"
+			<div class="picture left"><img src="./assets/images/nina.webp"
 					alt="the portrait of the photographer Nina Carducci" loading="lazy"></div>
 			<div id="about-me">
 				<h2 class="about-me__title">A propos de moi</h2>
@@ -119,13 +119,13 @@
 			<h2 class="title">Portfolio</h2>
 			<div class="container py-3">
 				<div class="gallery" style="display:none"><img data-gallery-tag="Concert" class="gallery-item"
-						src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.jpg"
+						src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.webp"
 						alt="dimmed lights showing a scene at a concert" loading="lazy"> <img
 						data-gallery-tag="Entreprises" class="gallery-item"
-						src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.jpg"
+						src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.webp"
 						alt="portrait of a man dressed formal" loading="lazy"> <img data-gallery-tag="Entreprises"
 						class="gallery-item"
-						src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.jpg"
+						src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.webp"
 						alt="a woman dressed formal smiling" loading="lazy"> <img data-gallery-tag="Mariages"
 						class="gallery-item"
 						src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.jpg"
@@ -140,10 +140,10 @@
 						src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash.jpg"
 						alt="a portrait of a girl wearing black with glasses on" loading="lazy"> <img
 						data-gallery-tag="Concert" class="gallery-item"
-						src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.jpg"
+						src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.webp"
 						alt="a snap of a singer at a concert" loading="lazy"> <img data-gallery-tag="Entreprises"
 						class="gallery-item"
-						src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.jpg"
+						src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.webp"
 						alt="a woman at her laptop laughing" loading="lazy"></div>
 			</div>
 			<div class="quote">
@@ -213,7 +213,8 @@
 						for="message">Message</label><textarea name="message" id="message" cols="30"
 						rows="10"></textarea><input type="submit" value="Envoyer"></form>
 			</div>
-			<div class="picture right"><img src="./assets/images/camera.png" alt="a picture of a camera" loading="lazy">
+			<div class="picture right"><img src="./assets/images/camera.webp" alt="a picture of a camera"
+					loading="lazy">
 			</div>
 		</div>
 	</footer>
