resizing small img cd

--- a/index.html
+++ b/index.html
@@ -128,16 +128,16 @@
 						src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.webp"
 						alt="a woman dressed formal smiling" loading="lazy"> <img data-gallery-tag="Mariages"
 						class="gallery-item"
-						src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.jpg"
+						src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.webp"
 						alt="woman's and man's hands reaching toward each other" loading="lazy"> <img
 						data-gallery-tag="Portrait" class="gallery-item"
-						src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.jpg"
+						src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.webp"
 						alt="a portrait of a dark skinned man with eyes closed" loading="lazy"> <img
 						data-gallery-tag="Mariages" class="gallery-item"
-						src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.jpg"
+						src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.webp"
 						alt="a married couple walking in a green area laughing" loading="lazy"> <img
 						data-gallery-tag="Portrait" class="gallery-item"
-						src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash.jpg"
+						src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash.webp"
 						alt="a portrait of a girl wearing black with glasses on" loading="lazy"> <img
 						data-gallery-tag="Concert" class="gallery-item"
 						src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.webp"
