--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
 	<meta name="viewport" content="width=device-width,initial-scale=1">
 	<meta name="robots" content="index, follow">
+	<meta charset="UTF-8">
 	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.css" media="print" onload='this.media="all"'><noscript>
 		<link rel="stylesheet" href="./assets/bootstrap/bootstrap.css">
 	</noscript>
@@ -18,12 +19,11 @@
 			href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap"
 			rel="stylesheet">
 	</noscript>
-	<meta charset="UTF-8">
-	<script src="./assets/bootstrap/bootstrap.bundle.js" defer="defer"></script>
+	<script src="./assets/bootstrap/bootstrap.bundle.js" defer></script>
 	<script src="https://code.jquery.com/jquery-3.4.1.min.js"
-		integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous" defer="defer"></script>
-	<script src="./assets/maugallery.js" defer="defer"></script>
-	<script src="./assets/scripts.js" defer="defer"></script>
+		integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous" defer></script>
+	<script src="./assets/maugallery.js" defer></script>
+	<script src="./assets/scripts.js" defer></script>
 	<title>Photographie | Nina Carducci</title>
 	<meta name="description"
 		content="Découvrez l'art de la photographie avec Nina Carducci. Spécialisée en capturant des moments précieux avec une approche unique et technique professionnelle. Basée a Bordeaux, Nina propose des séances photo, des retouches et des albums personnalisés pour figer vos plus beaux souvenirs.">
