added specific size

--- a/index.html
+++ b/index.html
@@ -72,7 +72,8 @@
 				<li><a href="#services">Service</a></li>
 				<li><a href="#contact">Contact</a></li>
 				<li><a class="social-link" href="https://www.instagram.com/ninacarducci.photo/?hl=fr"
-						target="_blank"><img src="assets/images/instagram.png" alt="instagram logo"></a></li>
+						target="_blank"><img src="assets/images/instagram.png" alt="instagram logo" width="20"
+							height="20"></a></li>
 			</ul>
 		</nav>
 	</header>
@@ -86,12 +87,13 @@
 			<div class="carousel-inner">
 				<div class="carousel-item active"><img
 						src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp" class="d-block w-100"
-						alt="a man dressed formal on a zebra crossing"></div>
+						alt="a man dressed formal on a zebra crossing" width="1263" height="585"></div>
 				<div class="carousel-item"><img src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.webp"
-						class="d-block w-100" alt="people cheering at a social event" loading="lazy"></div>
+						class="d-block w-100" alt="people cheering at a social event" loading="lazy" width="1263"
+						height="585"></div>
 				<div class="carousel-item"><img src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.webp"
 						class="d-block w-100" alt="newly weds kissing at a ceremony surrounded by their guests"
-						loading="lazy"></div>
+						loading="lazy" width="1263" height="585"></div>
 			</div><button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
 				data-bs-slide="prev"><span class="carousel-control-prev-icon" aria-hidden="true"></span><span
 					class="visually-hidden">Previous</span></button><button class="carousel-control-next" type="button"
@@ -213,8 +215,8 @@
 						for="message">Message</label><textarea name="message" id="message" cols="30"
 						rows="10"></textarea><input type="submit" value="Envoyer"></form>
 			</div>
-			<div class="picture right"><img src="./assets/images/camera.webp" alt="a picture of a camera"
-					loading="lazy">
+			<div class="picture right"><img src="./assets/images/camera.webp" alt="a picture of a camera" loading="lazy"
+					width="333" height="332">
 			</div>
 		</div>
 	</footer>
