specific size for nina img

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 		</div>
 		<div id="about">
 			<div class="picture left"><img src="./assets/images/nina.webp"
-					alt="the portrait of the photographer Nina Carducci" loading="lazy"></div>
+					alt="the portrait of the photographer Nina Carducci" loading="lazy" width="341" height="340"></div>
 			<div id="about-me">
 				<h2 class="about-me__title">A propos de moi</h2>
 				<h3 class="about-me__introduction">Devenir photographe était pour moi une évidence. Comme si j’y étais
