explicit size for all images including the gallery

--- a/index.html
+++ b/index.html
@@ -122,31 +122,32 @@
 			<div class="container py-3">
 				<div class="gallery" style="display:none"><img data-gallery-tag="Concert" class="gallery-item"
 						src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.webp"
-						alt="dimmed lights showing a scene at a concert" loading="lazy"> <img
+						alt="dimmed lights showing a scene at a concert" loading="lazy" width="364" height="364"> <img
 						data-gallery-tag="Entreprises" class="gallery-item"
 						src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.webp"
-						alt="portrait of a man dressed formal" loading="lazy"> <img data-gallery-tag="Entreprises"
-						class="gallery-item"
+						alt="portrait of a man dressed formal" loading="lazy" width="364" height="364"> <img
+						data-gallery-tag="Entreprises" class="gallery-item"
 						src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.webp"
-						alt="a woman dressed formal smiling" loading="lazy"> <img data-gallery-tag="Mariages"
-						class="gallery-item"
-						src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.webp"
-						alt="woman's and man's hands reaching toward each other" loading="lazy"> <img
-						data-gallery-tag="Portrait" class="gallery-item"
-						src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.webp"
-						alt="a portrait of a dark skinned man with eyes closed" loading="lazy"> <img
+						alt="a woman dressed formal smiling" loading="lazy" width="364" height="364"> <img
 						data-gallery-tag="Mariages" class="gallery-item"
+						src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.webp"
+						alt="woman's and man's hands reaching toward each other" loading="lazy" width="364"
+						height="364"> <img data-gallery-tag="Portrait" class="gallery-item"
+						src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.webp"
+						alt="a portrait of a dark skinned man with eyes closed" loading="lazy" width="364" height="364">
+					<img data-gallery-tag="Mariages" class="gallery-item"
 						src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.webp"
-						alt="a married couple walking in a green area laughing" loading="lazy"> <img
-						data-gallery-tag="Portrait" class="gallery-item"
+						alt="a married couple walking in a green area laughing" loading="lazy" width="364" height="364">
+					<img data-gallery-tag="Portrait" class="gallery-item"
 						src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash.webp"
-						alt="a portrait of a girl wearing black with glasses on" loading="lazy"> <img
-						data-gallery-tag="Concert" class="gallery-item"
+						alt="a portrait of a girl wearing black with glasses on" loading="lazy" width="364"
+						height="364"> <img data-gallery-tag="Concert" class="gallery-item"
 						src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.webp"
-						alt="a snap of a singer at a concert" loading="lazy"> <img data-gallery-tag="Entreprises"
-						class="gallery-item"
+						alt="a snap of a singer at a concert" loading="lazy" width="364" height="364"> <img
+						data-gallery-tag="Entreprises" class="gallery-item"
 						src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.webp"
-						alt="a woman at her laptop laughing" loading="lazy"></div>
+						alt="a woman at her laptop laughing" loading="lazy" width="364" height="364">
+				</div>
 			</div>
 			<div class="quote">
 				<figure>
