modified the gallery and minified maugallery

--- a/index.html
+++ b/index.html
@@ -2,50 +2,28 @@
 <html lang="fr">
 
 <head>
-	<meta name="viewport" content="width=device-width,initial-scale=1">
-	<meta name="robots" content="index, follow">
 	<meta charset="UTF-8">
-	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.css" media="print" onload='this.media="all"'><noscript>
-		<link rel="stylesheet" href="./assets/bootstrap/bootstrap.css">
-	</noscript>
-	<link rel="stylesheet" href="./assets/style.css">
-	<link rel="preconnect" href="https://fonts.googleapis.com">
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link rel="preload"
-		href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap"
-		as="style" crossorigin>
-	<noscript>
-		<link
-			href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap"
-			rel="stylesheet">
-	</noscript>
-	<script src="./assets/bootstrap/bootstrap.bundle.js" defer></script>
-	<script src="https://code.jquery.com/jquery-3.4.1.min.js"
-		integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous" defer></script>
-	<script src="./assets/maugallery.js" defer></script>
-	<script src="./assets/scripts.js" defer></script>
-	<title>Photographie | Nina Carducci</title>
-	<meta name="description"
-		content="Découvrez l'art de la photographie avec Nina Carducci. Spécialisée en capturant des moments précieux avec une approche unique et technique professionnelle. Basée a Bordeaux, Nina propose des séances photo, des retouches et des albums personnalisés pour figer vos plus beaux souvenirs.">
+	<title>Nina carducci</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<script type="application/ld+json">{
-	"@context": "https://schema.org",
-	"@type": "Photographe",
-	"address": {
-	  "@type": "PostalAddress",
-	  "addressLocality": "Nina Carducci photographe",
-	  "addressRegion": "Bordeaux",
-	  "postalCode": "33200",
-	  "streetAddress": "68 Avenue Alsace-Lorraine"
-	},
-
-	"name": "Nina Carducci",
-	"openingHours": [
-	  "Mo-Fr 10:00-19:00"
-	],
-	
-	"telephone": "05 56 67 78 89",
-	"url": "https://xpatk.github.io/NinaP4/"
-  }</script>
+			"@context": "https://schema.org",
+			"@type": "Photographe",
+			"address": {
+			  "@type": "PostalAddress",
+			  "addressLocality": "Nina Carducci photographe",
+			  "addressRegion": "Bordeaux",
+			  "postalCode": "33200",
+			  "streetAddress": "68 Avenue Alsace-Lorraine"
+			},
+		
+			"name": "Nina Carducci",
+			"openingHours": [
+			  "Mo-Fr 10:00-19:00"
+			],
+			
+			"telephone": "05 56 67 78 89",
+			"url": "https://xpatk.github.io/NinaP4/"
+		  }</script>
 	<meta property="og:site_name" content="Nina Carducci Photographie">
 	<meta property="og:type" content="website">
 	<meta property="og:url" content="https://xpatk.github.io/NinaP4/">
@@ -60,6 +38,18 @@
 		content="Découvrez l'art de la photographie avec Nina Carducci. Spécialisée dans la capture de moments précieux avec une approche unique et une technique professionnelle.">
 	<meta name="twitter:image" content="https://xpatk.github.io/NinaP4/assets/images/nina.jpg">
 	<meta name="twitter:url" content="https://xpatk.github.io/NinaP4/">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
+	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.css">
+	<link rel="stylesheet" href="./assets/style.css">
+	<link
+		href="https://fonts.googleapis.com/css2?family=Inter&amp;family=Spectral:ital,wght@0,400;1,300;1,400;1,800&amp;display=swap"
+		rel="stylesheet">
+	<script src="./assets/bootstrap/bootstrap.bundle.js"></script>
+	<script src="https://code.jquery.com/jquery-3.4.1.min.js" defer=""
+		integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+	<script src="./assets/maugallery.min.js" defer=""></script>
+	<script src="./assets/scripts.js" defer=""></script>
 </head>
 
 <body>
