--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 
 <head>
 	<meta charset="UTF-8">
-	<title>Nina carducci</title>
+	<title>Nina carducci photographie</title>
+	<meta name="description"
+		content="Explorez l'univers de Nina Carducci, photographe passionnée basée à Bordeaux. Services de shooting, retouches et albums photo personnalisés">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<script type="application/ld+json">{
 			"@context": "https://schema.org",
